# AImation

./: main.py  meson.build
_build/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
_build/meson-private/: coredata.dat.prev
_build/src/: aimation  aimation.gresource
data/: com.github.elbley.aimation.desktop.in  com.github.elbley.aimation.gschema.xml  meson.build
src/: aimation.gresource.xml  aimation.in  deco_manager.py  image.py  main.py  meson.build  minimap.py  new_image_dialog.py  options_manager.py  preferences.py  properties.py  selection_manager.py  timeline.py  tools_initializer.py  window.py
src/animeInterp/: animeInterp.py
src/animeInterp/datas/: AniTriplet.py  AniTripletWithSGMFlow.py  AniTripletWithSGMFlowTest.py
src/animeInterp/models/: AnimeInterp.py
src/optionsbars/: abstract_optionsbar.py
src/optionsbars/classic/: optionsbar_color_popover.py
src/tools/: abstract_tool.py
src/tools/classic_tools/brushes/: abstract_brush.py  brush_airbrush.py  brush_hairy.py  brush_nib.py  brush_simple.py
src/tools/transform_tools/filters/: abstract_filter.py  filter_blur.py  filter_colors.py  filter_contrast.py  filter_emboss.py  filter_saturation.py  filter_transparency.py  filter_veil.py
src/ui/: app-menus.ui  preferences.ui  shortcuts.ui  window.ui
